--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header section {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,13 +32,13 @@ body {
     font-size: 20px;
 }
 
-.header section ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header section ul li {
+.header nav ul li {
     display: inline;
-    margin-left: 55px;
+    margin-left: 25px;
 }
 
 a {
@@ -51,7 +51,7 @@ p {
 }
 
 .hero {
-    height: 1000px;
+    height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
@@ -77,134 +77,57 @@ p {
 
 .benefits {
     margin-right: 20px;
-    padding: 25px;
+    padding: 20px;
     clear: both;
     float: right;
-    width: 18%;
+    width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    padding: 10px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    padding: 10px;
-    color: #ffffff;
-}
-
+.benefit-lead
+.benefit-brand
 .benefit-cost {
     margin-bottom: 32px;
-    padding: 10px;
+    /* padding: 10px; */
     color: #ffffff;
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
+.benefit-lead h3
+.benefit-brand h3
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
+.benefit-lead img,
+.benefit-brand img, 
 .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-/* margin-right: -40px; allows for the length/spacing adjusted correctly */
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    margin-right: -40px; 
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-/* padding-right applied for moving text over */
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    margin-right: -40px;
-    padding: 50px;
-    padding-right: 180px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
+.search-engine-optimization,
+.online-reputation-management, 
 .social-media-marketing {
     margin-bottom: 20px;
-    margin-right: -40px;
     padding: 50px;
-    padding-right: 300px; 
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-    margin-right: 30px;
-}
-
-/* margin right applied for moving img over */
-
+.search-engine-optimization img,
+.social-media-marketing img, 
 .online-reputation-management img {
-    max-height: 200px;
-    margin-right: 50px;
-    margin-left: 50px;
+    max-height: 200px;  
 }
 
-.social-media-marketing img {
-    max-height: 200px;
-    margin-right: 50px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 30px;
-    margin-right: 500px;
-    font-size: 36px;
-}
-
-/* margin-right: 500px is being applied to have management text on second line */
-
-.online-reputation-management h2 {
-    margin-bottom: 20px; 
-    margin-right: 500px;
-    font-size: 40px;
-}
-
+.search-engine-optimization h2,
+.online-reputation-management h2,
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
