updated README with URL and description

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,11 +86,12 @@ p {
     background-color: #2589bd;
 }
 
+/* Stacked classes together based on repeating criteria, */
+
 .benefit-lead
 .benefit-brand
 .benefit-cost {
     margin-bottom: 32px;
-    /* padding: 10px; */
     color: #ffffff;
 }
 
@@ -140,6 +141,6 @@ p {
     text-align: center;
 }
 
-.footer h2 {
+.footer h4 {
     font-size: 20px;
 }
